...
            ),
            child: Row(
              mainAxisAlignment: MainAxisAlignment.center,
              children: [
                Expanded(
                  child: Text(
                    key: const ValueKey('resultadoIMC'),
                    "IMC: ${imc.toStringAsFixed(2)}",
                    style: TextStyle(
                      fontWeight: FontWeight.bold,
                      fontSize: 18.0,
                      color: Theme.of(context).colorScheme.onSecondaryContainer,
                    ),
...
          ),
          Row(
            mainAxisAlignment: MainAxisAlignment.center,
            children: [
              Expanded(
                child: Text(
                  key: const ValueKey('diagnosticoIMC'),
                  textodiagnosticoIMC,
                  style: TextStyle(
                    color: Theme.of(context).colorScheme.onSecondaryContainer,
                    fontSize: 20.0,
                    fontWeight: FontWeight.bold,
                  ),
...
